# LLM-rg

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh  train.sh
analysis_out/2026-06-26_14-24-46/: metadata.tsv
datasets/: shakespeare_ch_to_ix.npy  shakespeare_ix_to_ch.npy  shakespeare_test.npy
scripts/: create_shakespeare_dataset.py  eval_hellaswag.py  run_climbing.py
tinyllm/: analyzer.py  hellaswag.py  load_data.py  models.py  train.py
