[project]
name = "llm-rg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.5",
    "ipython>=8.39.0",
    "numpy>=2.2.6",
    "pytest>=9.0.3",
    "tiktoken>=0.13.0",
    "torch==2.8.0",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
]
